# cgfx_pyramids

./: CMakeLists.txt  makefile  opengl3DTest.cpp  openglTest.cpp
